resources/sass/app.scss
// Fonts
@import url('https://fonts.googleapis.com/css?family=Nunito');

// NHSUK Frontend
@import "../../node_modules/nhsuk-frontend";

// Extras
@import "nhs-colours";
@import "nhs-additional";
@import "components/inset-text";

// Images
img {
  max-width: 100%;
  width: 100%;
  height: auto;
  display: block;
}

